2007-11-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/PortReport.h: Started
	work on a better method for getting notifications of port
	status changes.

	* src/libYARP_OS/include/yarp/os/Network.h: Added simpler
	code interface for setting/getting port properties.  
	The name server was updated for this, as part of the 
	conversion to the fully bottle-compatible interface.

2007-11-05  Arjan Gijsberts  <arjan@liralab.it>

	* src/libYARP_dev/src/ffmpeg/default/yarp/FfmpegGrabber.cpp: 
	added support for Video4Linux2, using a --v4l2 flag.

2007-10-30  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/example.tcl: figure out how DLL inclusion works
	in TCL on Windows.

2007-10-25  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/NameServer.cpp: allow list of ports
	to be prefiltered by prefix, to optimize yarpfs.

	* conf/YarpReqLib.cmake: Make MSYS compile compatible with GTK
	by setting -mms-bitfields flag.

2007-10-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/TcpCarrier.h: dust off TCP carrier
	variant without flow control, call it "fast_tcp".

	* src/libYARP_OS/src/Carriers.cpp: add "fast_tcp" as a known 
	carrier.

2007-10-16  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/src/RemoteControlBoard.cpp: Historically, this
	file has made a pointless connection from a reader port to a
	writer port.  I'm not sure why.  This is finally causing some
	troubles, so I've commented the connection out.

	* src/libYARP_OS/src/Companion.cpp: added "yarp forward"
	capability, to forward commands through an intermediary.  This is
	useful for monitoring RPC command/reply sequences.  Streaming
	messages can of course already be monitored with "yarp read".
	This is experimental rather than polished work.
	
2007-10-15 Alessandro Scalzo <alessandro@liralab.it>

	* src/libYARP_OS/src/NameServer.cpp: Added --noauto option: if
	config file is not found, name server exits.
